# vyasa

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  layout.md  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json  skills-lock.json
.github/workflows/: lint.yml
docs/: maintenance.md  python-type-annotations.md
docs/decisions/: 001-guides-as-audit-source-of-truth.md  002-four-type-doc-taxonomy.md  003-spec-lifecycle-and-organisation.md  004-design-doc-as-fifth-taxonomy-type.md  index.md
framework/: README.md  auditing-anti-patterns.md  layout.md  managing-project-information.md
framework/guides/: diagrams.md  maintenance.md  mermaid.md  staleness.md  writing-agents-md.md  writing-architecture-docs.md  writing-conventions.md  writing-decision-records.md  writing-design-docs.md  writing-layout-md.md  writing-prose-style.md  writing-reference-docs.md  writing-specs.md
framework/tools/: find-docs-dir.sh  find-word-contexts.sh  prettier-fix.sh
scripts/setup/: README.md  helpers.sh  install-claude-plugins.sh  install-deps.sh  install-gh.sh  install-jq.sh  install-playwright-cli.sh  install-pnpm.sh  install-prettier.sh  install-skills.sh  install-taplo.sh  install-uv.sh  install-yamllint.sh  setup.sh  verify-setup.sh
scripts/tools/: README.md  actionlint-lint.sh  basedpyright-lint.sh  block-no-verify.sh  post-write-lint.sh  pytest-run.sh  ruff-fix.sh  shellcheck-lint.sh  stop-prettier.sh  taplo-fmt.sh  (+2 more)
tests/: test_block_no_verify.py  test_find_docs_dir.py  test_find_word_contexts.py
