[project]
name = "vyasa"
version = "0.1.0"
description = "Opinionated documentation framework for AI coding agents"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
  "basedpyright>=1.38.2",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.15.4",
  "shellcheck-py>=0.11.0.1",
  "prek>=0.3.4",
  "yamllint==1.38.0",
  "yamlfix>=0.16.0",
  "actionlint-py>=1.7.11",
]

[tool.pytest.ini_options]
pythonpath = ["scripts"]
